fixes carousel bouncing on mobile too

--- a/www/css/silver-creek-design.css
+++ b/www/css/silver-creek-design.css
@@ -24,9 +24,7 @@ body {
 }
 #quote-carousel{
   padding: 50px 0px 50px  0px;
-}
-.carousel-inner{
-  height: 250px;
+  min-height: 250px;
 }
 #quote-carousel .carousel-control {
     background: none;
@@ -43,4 +41,10 @@ body {
     font-family: 'Fontawesome';
     float: left;
     margin-right: 10px;
+}
+
+@media (max-width: 480px) { 
+  #quote-carousel{
+    min-height: 420px;
+  }
 }
